optimise logo from 2.6Mb to 8.6Kb

--- a/Roster/Musicians/Copy-of-Yyash.html
+++ b/Roster/Musicians/Copy-of-Yyash.html
@@ -24,7 +24,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "ThirdPlanetStudio",
-		"logo": "../../images/3PSFINALLOGO.png",
+		"logo": "../../images/3PSFINALLOGO-web.png",
 		"sameAs": [
 				"https://www.facebook.com/thirdplanetstudio",
 				"https://twitter.com/3PlanetStudio",
@@ -42,7 +42,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-align-center-sm u-align-center-xs u-clearfix u-gradient u-header u-header" id="sec-27a4"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="../../Home.html" class="u-image u-logo u-image-1" data-image-width="1600" data-image-height="1600" data-animation-name="rollIn" data-animation-duration="3500" data-animation-delay="0" data-animation-direction="" title="Home">
-          <img src="../../images/3PSFINALLOGO.png" class="u-logo-image u-logo-image-1" data-image-width="128">
+          <img src="../../images/3PSFINALLOGO-web.png" class="u-logo-image u-logo-image-1" data-image-width="128">
         </a>
         <div class="u-social-icons u-spacing-6 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/thirdplanetstudio"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-text-white u-icon-1"><img src="../../images/1384005-99495e7f.png" alt=""></span>
