--- a/Roster/Musicians/Godcloud.html
+++ b/Roster/Musicians/Godcloud.html
@@ -31,10 +31,11 @@
     <meta name="theme-color" content="#478ac9">
     <meta name="twitter:site" content="@">
     <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="images/social.png">
     <meta name="twitter:title" content="Godcloud">
-    <meta name="twitter:description" content="ThirdPlanetStudio">
+    <meta name="twitter:description" content="Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.">
     <meta property="og:title" content="Godcloud">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-align-center-sm u-align-center-xs u-clearfix u-gradient u-header u-header" id="sec-27a4"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
