--- a/Roster/Musicians/Luis-Antonio-Alicea.html
+++ b/Roster/Musicians/Luis-Antonio-Alicea.html
@@ -32,9 +32,10 @@
 		]
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta name="twitter:site" content="@">
+    <meta name="twitter:site" content="@3PlanetStudio">
     <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="images/social.png">
+<meta property="og:image" content="images/social.png">
     <meta name="twitter:title" content="Luis Antonio Alicea">
     <meta name="twitter:description" content="Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.">
     <meta property="og:title" content="Luis Antonio Alicea">
