--- a/Home.html
+++ b/Home.html
@@ -43,7 +43,7 @@
 <meta name="twitter:image" content="/images/social.png">
 <meta property="og:image" content="/images/social.png">
     <meta name="twitter:title" content="Third Planet Studio">
-    <meta name="twitter:description" content="Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.">
+    <meta name="twitter:description" content="The new generation to the Music & Art community, paving the road for the future of Web3 and the talented artists within.">
     <meta property="og:type" content="website">
   </head>
   <body class="u-black u-body u-xl-mode" data-lang="en"><header class="u-align-center-sm u-align-center-xs u-clearfix u-gradient u-header u-header" id="sec-27a4"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
