--- a/About-Us.html
+++ b/About-Us.html
@@ -36,9 +36,9 @@
 <meta name="twitter:image" content="/images/social.png">
 <meta property="og:image" content="/images/social.png">
     <meta name="twitter:title" content="About Us">
-    <meta name="twitter:description" content="Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.">
+    <meta name="twitter:description" content="The new generation to the Music & Art community, paving the road for the future of Web3 and the talented artists within.">
     <meta property="og:title" content="About Us">
-    <meta property="og:description" content="Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.">
+    <meta property="og:description" content="The new generation to the Music & Art community, paving the road for the future of Web3 and the talented artists within.">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-align-center-sm u-align-center-xs u-clearfix u-gradient u-header u-header" id="sec-27a4"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
@@ -111,7 +111,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/tps4.png" alt="" data-image-width="1500" data-image-height="500">
         <h1 class="u-align-left u-text u-text-default u-text-1">About Us</h1>
-        <p class="u-align-left u-text u-text-2"> Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.</p>
+        <p class="u-align-left u-text u-text-2"> The new generation to the Music & Art community, paving the road for the future of Web3 and the talented artists within.</p>
       </div>
     </section>
     <section class="u-align-center u-black u-clearfix u-section-2" id="carousel_dec1">
