--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <meta name="twitter:image" content="/images/social.png">
 <meta property="og:image" content="/images/social.png">
     <meta name="twitter:title" content="Intro">
-    <meta name="twitter:description" content="Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.">
+    <meta name="twitter:description" content="The new generation to the Music & Art community, paving the road for the future of Web3 and the talented artists within.">
     <meta property="og:title" content="Intro">
-    <meta property="og:description" content="Third Planet Studio was founded by Bianca, Kevin and her son Gulian. As a family-based operation, we offer the trust that is critical when entering into ​new territory. We share your passion and understand that there is no one way to express yourself and everyone should have the freedom to create and write their own future and legacy.">
+    <meta property="og:description" content="The new generation to the Music & Art community, paving the road for the future of Web3 and the talented artists within.">
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Intro.html" data-home-page-title="Intro" class="u-black u-body u-xl-mode" data-lang="en">
