Adding Fathom analytics

--- a/Intro.html
+++ b/Intro.html
@@ -36,7 +36,10 @@
     <meta property="og:title" content="Intro">
     <meta property="og:description" content="The new generation to the Music & Art community, paving the road for the future of Web3 and the talented artists within.">
     <meta property="og:type" content="website">
-  </head>
+  <!-- Fathom - beautiful, simple website analytics -->
+  <script src="https://cdn.usefathom.com/script.js" data-site="LYIONDZP" defer></script>
+<!-- / Fathom -->
+</head>
   <body class="u-black u-body u-xl-mode" data-lang="en">
     <section class="u-clearfix u-uploaded-video u-video u-video-contain u-section-1" id="sec-6914">
       <div class="u-background-video u-expanded" style="">
