--- a/Roster/Musicians/Griffter.html
+++ b/Roster/Musicians/Griffter.html
@@ -42,7 +42,10 @@
     <meta property="og:title" content="Griffter">
     <meta property="og:description" content="The new generation to the Music & Art community, paving the road for the future of Web3 and the talented artists within.">
     <meta property="og:type" content="website">
-  </head>
+  <!-- Fathom - beautiful, simple website analytics -->
+  <script src="https://cdn.usefathom.com/script.js" data-site="LYIONDZP" defer></script>
+<!-- / Fathom -->
+</head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-align-center-sm u-align-center-xs u-clearfix u-gradient u-header u-header" id="sec-27a4"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="../../Home.html" class="u-image u-logo u-image-1" data-image-width="1600" data-image-height="1600" data-animation-name="rollIn" data-animation-duration="3500" data-animation-delay="0" data-animation-direction="" title="Home">
           <img src="../../images/3PSFINALLOGO-web.png" class="u-logo-image u-logo-image-1" data-image-width="128">
