--- a/Home.html
+++ b/Home.html
@@ -121,8 +121,8 @@
     <section class="u-black u-clearfix u-section-2" id="sec-431f">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-align-left u-text u-text-default u-text-1">JBurn</h1>
-        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/jburn-dirty-dumb-small.jpg" alt="" data-image-width="1722" data-image-height="1722" data-href="https://app.manifold.xyz/c/dirty-jburn" data-target="_blank">
-        <h2 class="u-text u-text-default u-text-2">New Collection: Dirty &amp; Dumb</h2>
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/jburn-everyday.webp" alt="" data-image-width="1722" data-image-height="1722" data-href="https://www.sound.xyz/jburn/every-day" data-target="_blank">
+        <h2 class="u-text u-text-default u-text-2">Fresh Drop: Every Day</h2>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-3" id="sec-0d4f">
